--- a/src/views/login.html
+++ b/src/views/login.html
@@ -1,14 +1,14 @@
 <head>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="login_style.css" />
+    <link rel="stylesheet" href="assets/css/login_style.css" />
     <title>Connexion</title>
   </head>
 
   <body>
-      <form class="box" method="post" name="formUSR" action="send.php">
+      <form class="box" method="post" name="formUSR" action="login.php">
         <h1>Login</h1>
         <input type="text" id="pseudo" name="pseudo" placeholder="pseudo" size="30" required />
         <input type="password" id="passwd" name="passwd" placeholder="password" size="30" required />
-        <input type="submit" value="Send nudes" />
+        <input type="submit" value="Login" />
       </form>
   </body>
