--- a/src/views/login.html
+++ b/src/views/login.html
@@ -7,8 +7,8 @@
   <body>
       <form class="box" method="post" name="formUSR" action="login.php">
         <h1>Login</h1>
-        <input type="text" id="pseudo" name="pseudo" placeholder="pseudo" size="30" required />
-        <input type="password" id="passwd" name="passwd" placeholder="password" size="30" required />
+        <input type="text" id="login" name="login" placeholder="Mail" size="50" required />
+        <input type="password" id="passwd" name="passwd" placeholder="password" size="50" required />
         <input type="submit" value="Login" />
       </form>
   </body>
