Nouvelle page accueil + redirection menu

--- a/src/views/formulaire_intervention.html
+++ b/src/views/formulaire_intervention.html
@@ -15,7 +15,7 @@
 	<body>
 	
 		<div id="form">
-			<form method="post" action="../bdd/save_intervention.php">
+			<form method="post" action="../php/save_intervention.php">
 				
 				<h1>Formulaire d'intervention</h1>
 				
