--- a/assets/css/formulaire.css
+++ b/assets/css/formulaire.css
@@ -1,50 +1,65 @@
 body {
- font-family:"trebuchet ms",sans-serif;
- font-size:90%;
+    font-family:"trebuchet ms",sans-serif;
+    font-size:90%;
  }
+
+.place_form {
+    margin : 0 auto;
+    width: 100px;
+}
+
 form {
- background-color:#FAFAFA;
- padding:10px;
- width:280px;
+    background-color:#FAFAFA;
+    padding:10px;
+    width:280px;
  }
+
 fieldset {
- padding:0 20px 20px 20px;
- margin-bottom:10px;
- border:1px solid #6495ed;
+    padding:0 20px 20px 20px;
+    margin-bottom:10px;
+    border:1px solid #6495ed;
  }
+
 legend {
- color:#6495ed;
- font-weight:bold
+    color:#6495ed;
+    font-weight:bold
  }
+
 label {
- margin-top:10px;
- display:block;
+    margin-top:10px;
+    display:block;
  }
+
 label.inline {
- display:inline;
- margin-right:50px;
+    display:inline;
+    margin-right:50px;
  }
+
 input, select, option {
- background-color:#F5F5F5;
+    background-color:#F5F5F5;
  }
+
 input, select {
- padding:3px;
- border:1px solid #808080X;
- border-radius:5px;
- width:200px;
- box-shadow:1px 1px 2px #C0C0C0 inset;
+    padding:3px;
+    border:1px solid #808080X;
+    border-radius:5px;
+    width:200px;
+    box-shadow:1px 1px 2px #C0C0C0 inset;
  }
+
 select {
- margin-top:10px;
+    margin-top:10px;
  }
+
 input[type=radio] {
- background-color:transparent;
- border:none;
- width:10px;
+    background-color:transparent;
+    border:none;
+    width:10px;
  }
+
 input[type=submit], input[type=reset] {
- width:100px;
- margin-left:5px;
- box-shadow:1px 1px 1px #6495ed;
- cursor:pointer;
+    width:100px;
+    margin-left:5px;
+    box-shadow:1px 1px 1px #6495ed;
+    cursor:pointer;
  }
