--- a/src/views/navigation.html
+++ b/src/views/navigation.html
@@ -1,20 +1,31 @@
 <head>
-    <link href="bootstrap/css/bootstrap.min.css">
+	<!-- <link rel="stylesheet" type="css" href="/../../bootstrap/css/bootstrap.min.css"/> -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
 </head>
 
-<nav class="navbar-header">
 
-    <!-- DECONNEXION -->
-    <?php if(session_status() == PHP_SESSION_ACTIVE): ?>
-        <button class="btn btn-default" type="submit">
-            <a href="../php/logout.php">Deconnexion</a>
-        </button>
 
-    <!-- CONNEXION -->
-    <?php else: ?>
-        <button class="btn btn-default" type="submit">
-            <a href="../../index.html">Connexion</a>
-        </button>
-        
-    <?php endif ?>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+
+  <a class="navbar-brand" href="#">Acceuil</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    <div class="navbar-nav">
+      <a class="nav-item nav-link" href="#">Demandes</a>
+      <a class="nav-item nav-link" href="#">Messagerie</a>
+      
+      <!-- DECONNEXION -->
+      <?php if(session_status() == PHP_SESSION_ACTIVE): ?>
+		<a class="nav-item nav-link" href="../php/logout.php">Deconnexion</a>
+	
+	  <!-- CONNEXION -->
+	  <?php else: ?>
+		<a class="nav-item nav-link" href="../../index.html">Connexion</a>
+	
+    </div>
+  </div>
+  
 </nav>
