ajout d'une balise endif php

--- a/src/views/navigation.html
+++ b/src/views/navigation.html
@@ -19,12 +19,12 @@
       
       <!-- DECONNEXION -->
       <?php if(session_status() == PHP_SESSION_ACTIVE): ?>
-		<a class="nav-item nav-link" href="../php/logout.php">Deconnexion</a>
-	
+		    <a class="nav-item nav-link" href="../php/logout.php">Deconnexion</a>
 	  <!-- CONNEXION -->
-	  <?php else: ?>
-		<a class="nav-item nav-link" href="../../index.html">Connexion</a>
-	
+	    <?php else: ?>
+        <a class="nav-item nav-link" href="../../index.html">Connexion</a>
+      
+      <?php endif; ?>
     </div>
   </div>
   
