--- a/src/views/accueil.html
+++ b/src/views/accueil.html
@@ -5,14 +5,16 @@
 </head>
 
 
-<footer>
+<body>
+
 	<div class="jumbotron text-center" style="margin-bottom:0">
-	  <img src="usmb.png" class="rounded" >
-	  <img src="polytech.jpg" class="rounded" ><br/>
-	  
-	  <p>
-		&copy Polytech Annecy-Chambery
-	  </p>
-	  
+	  <h1>Il faut trouver un titre</h1>
+	  <p>Bienvenu sur l'application web qui permet de prendre contact avec des experts afin qu'ils interviennent dans votre formation!</p> 
 	</div>
-</footer>
+	
+	
+
+
+</body>
+
+
