--- a/src/views/formulaire_demande.html
+++ b/src/views/formulaire_demande.html
@@ -4,38 +4,35 @@
 
    <head>
       <meta charset="UTF-8">
-      <link rel="stylesheet" href="../../assets/css/formulaire.css" />
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
       <title> formulaire de demande </title>
    </head>
 
    <body> 
-
-      <div class="place_form">
-
-         <!-- FORMULAIRE DE DEMANDE -->
-         <form action="../php/save_demande.php" method="post" >
-
-            <!-- OBJET DE LA DEMANDE -->
-            <fieldset>
-               <legend> Objet de la demande : </legend>
-               <input type="titre" name="titre" size="20" maxlength="40" placeholder="objet" id="titre" required />
-            </fieldset>
-   
-            <!-- DESCRIPTION -->
-            <fieldset>
-               <legend> Description :</legend>
-               <textarea name="description" id="description" cols="20" rows="4" required></textarea>
-            </fieldset>
-   
-            <p>
-            <input type="submit" value="Envoyer" />
-            <input type="reset" value="Annuler" />
-            </p>
-   
-         </form>
-
-      </div>
-      
+		<!-- FORMULAIRE -->
+      <form class="form-horizontal" action="/action_page.php">
+		<!--objet de la demande -->
+		<div class="form-group">
+			<label class="control-label col-sm-2" for="demande">Objet de la demande:</label>
+    <div class="col-sm-10">
+      <input type="demande" class="form-control" id="demande" placeholder="Entrez l'objet de la demande">
+    </div>
+  </div>
+  
+  <!--description -->
+  <div class="form-group">
+    <label class="control-label col-sm-2" for="description">Description:</label>
+    <div class="col-sm-10"> 
+    <textarea class="form-control" id="description" rows="3"></textarea>
+    </div>
+  </div>
+  
+  <div class="form-group"> 
+    <div class="col-sm-offset-2 col-sm-10">
+      <button type="submit" class="btn btn-default">Envoyer</button>
+    </div>
+  </div>
+</form>
    </body>
 
 </html>
