--- a/src/views/formulaire_intervention.html
+++ b/src/views/formulaire_intervention.html
@@ -8,27 +8,41 @@
 		
 		<meta charset="UTF-8"> 
 		
-		<link rel="stylesheet" type="text/css" href="../../assets/css/formulaire.css"/>
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
 	</head>
 	
 	<body>
 	
-		<div id="form">
-			<form method="post" action="../php/save_intervention.php">
+	<form class="form-horizontal" action="/action_page.php">
+		<!--Nombre d'heures -->
+		<div class="form-group">
+			<label class="control-label col-sm-2" for="intervention">Nombre d'heures</label>
+			<div class="col-sm-10">
+				<input type="intervention" class="form-control" id="intervention" placeholder="Entrez ">
+			</div>
+		</div>
+	<!--nature de l'intervention -->
+	<div class="form-group">
+			<label class="control-label col-sm-2" for="">Nature de l'intervention:</label>
+    <div class="col-sm-10">
+	<div class="checkbox">
+		<label><input type="checkbox" value="">TD</label>
+	</div>
+	<div class="checkbox disabled">
+		<label><input type="checkbox" value="" disabled>TP</label>
+	</div>
+
+	<div class="form-group"> 
+		<div class="col-sm-offset-2 col-sm-10">
+			<button type="submit" class="btn btn-default">Envoyer</button>
+		</div>
+  </div>
+</form>
 				
-				<h1>Formulaire d'intervention</h1>
 				
-				<p>
-					<label>Nombre d'heures que l'expert a effectuees</label> <input type="text" name="nb_heures" /> <br/>
-					<label>Nature de l'intervention</label>
-						<select name="nature">
-						<option>explications
-						<option>TD
-						<option>TP
-						</select> <br/><br/>
-					<input id="bouton" type="submit" value="Valider">
-				</p>
+				
+				
 	
 	</body>
 
