--- a/src/views/templates/footer.html
+++ b/src/views/templates/footer.html
@@ -5,14 +5,54 @@
 </head>
 
 
-<footer>
-	<div class="jumbotron text-center" style="margin-bottom:0">
-	  <img src="usmb.png" class="rounded" >
-	  <img src="polytech.jpg" class="rounded" ><br/>
-	  
-	  <p>
-		&copy Polytech Annecy-Chambery
-	  </p>
-	  
-	</div>
+<footer style="background-color:lightgrey;">
+
+<!-- Footer Elements -->
+  <div class="container">
+	<br/>
+
+    <!--Grid row-->
+    <div class="row d-flex justify-content-center">
+
+      <!--Grid column-->
+      <div class="col-lg-2 col-md-12 mb-4">
+
+        <!--Image-->
+        <div class="view overlay z-depth-1-half">
+          <img src="usmb.png" class="rounded">
+          <a href="">
+            <div class="mask rgba-white-light"></div>
+          </a>
+        </div>
+       
+      </div>
+      <!--Grid column-->
+      
+       <!--Grid column-->
+      <div class="col-lg-2 col-md-6 mb-4">
+
+        <!--Image-->
+        <div class="view overlay z-depth-1-half">
+          <img src="polytech.jpg" class="rounded">
+          <a href="">
+            <div class="mask rgba-white-light"></div>
+          </a>
+        </div>
+
+      </div>
+      <!--Grid column-->
+
+    </div>
+    <!--Grid row-->
+
+  </div>
+  <!-- Footer Elements -->
+
+  <!-- Copyright -->
+  <div class="footer-copyright text-center py-3">© 
+    <a href="https://www.polytech.univ-savoie.fr/">Polytech Annecy-Chambery</a>
+  </div>
+  <!-- Copyright -->
+
 </footer>
+<!-- Footer -->    
