--- a/src/views/accueil.html
+++ b/src/views/accueil.html
@@ -13,6 +13,26 @@
 	</div>
 	
 	
+	
+	<div class="container" style="margin-top:30px">
+		<div class="row">
+			<div class="col-sm-4">
+      
+				<h3>Liens</h3>
+				<p>Liens qui peuvent vous être utiles :</p>
+					<ul class="nav nav-pills flex-column">
+						<li class="nav-item">
+							<a class="nav-link" href="http://ead-polytech.univ-savoie.fr/">EAD Polytech</a>
+						</li>
+						
+						<li class="nav-item">
+							<a class="nav-link" href="https://www.univ-smb.fr/">Université Savoie Mont Blanc</a>
+						</li>
+					</ul>
+			</div>
+		</div>
+	</div>
+	
 
 
 </body>
