navigation remodelée + accueil corrigé

--- a/src/views/templates/footer.html
+++ b/src/views/templates/footer.html
@@ -49,8 +49,8 @@
   <!-- Footer Elements -->
 
   <!-- Copyright -->
-  <div class="footer-copyright text-center py-3">© 
-    <a href="https://www.polytech.univ-savoie.fr/">Polytech Annecy-Chambery</a>
+  <div class="footer-copyright text-center py-3"> 
+    <a href="https://www.polytech.univ-savoie.fr/">&copy Polytech Annecy-Chambery</a>
   </div>
   <!-- Copyright -->
 
