enregistrement demande + design

--- a/src/views/templates/footer.html
+++ b/src/views/templates/footer.html
@@ -5,7 +5,7 @@
 </head>
 
 
-<footer style="background-color:lightgrey;">
+<footer class="fixed-bottom" style="background-color:lightgrey;">
 
 <!-- Footer Elements -->
   <div class="container">
