--- a/public/css/login_style.css
+++ b/public/css/login_style.css
@@ -13,7 +13,7 @@
   text-transform: uppercase;
   font-weight: 500;
 }
-.box input[type = "text"],.box input[type = "password"]{
+.box input[type = "email"],.box input[type = "password"]{
   border:0;
   background: none;
   display: block;
@@ -27,7 +27,7 @@
   border-radius: 24px;
   transition: 0.25s;
 }
-.box input[type = "text"]:focus,.box input[type = "password"]:focus{
+.box input[type = "email"],.box input[type = "password"]{
   width: 280px;
   border-color: #2ecc71;
 }
